<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send To:"
        android:textColor="@color/black"
        android:textSize="12sp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sendToSpinner"
        android:entries="@array/sendToSpinnerData"
        android:layout_marginBottom="5dp">

    </Spinner>

    <ProgressBar
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/progressBar"
        android:visibility="gone"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userSpinner"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"

        android:visibility="gone"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:text="@string/priority"
        android:textSize="12sp"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prioritySpinner"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:entries="@array/priorityArray"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:text="@string/message_title"
        android:textSize="12sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:singleLine="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:text="@string/message_body"
        android:textSize="12sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="top|start"
        android:lines="5"
        android:id="@+id/messageBody"/>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_alignParentStart="true"
            style="@style/RtlUnderlay.Widget.AppCompat.ActionButton"
            android:id="@+id/cancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send Message"
            android:layout_alignParentEnd="true"
            style="@style/RtlUnderlay.Widget.AppCompat.ActionButton"
            android:textColor="@color/black"
            android:id="@+id/sendMessage" />
    </RelativeLayout>


</LinearLayout>