<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"

    tools:context="com.example.titomi.workertrackerloginmodule.supervisor.activities.ActivityAssignTask"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/selfCheckBox"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/assign_self"
                 />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="Assign to:"

                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/workers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/task_type"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/taskType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:entries="@array/taskType" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Task Title:"

                android:textSize="12sp" />

            <EditText
                android:id="@+id/taskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textCapWords"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Task Description:"

                android:textSize="12sp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textCapSentences|textMultiLine"
                android:singleLine="true" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/location"
                    android:id="@+id/locationLabel"

                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/selectLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@drawable/ic_pin_drop_black_24dp"
                    android:gravity="center_vertical"
                    android:text="@string/click_to_select"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>


            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:editable="false"
                android:enabled="false"
                android:inputType=""

                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Institution Name:"

                android:textSize="12sp" />

            <EditText
                android:id="@+id/institution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textCapWords"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Full Address:"

                android:id="@+id/fullAddressLabel"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/fullAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textCapWords"
                android:maxLines="2" />


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:alignmentMode="alignBounds"
                android:columnCount="3"
                android:rowCount="2"
                android:useDefaultMargins="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="State:"

                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/lgaLoading"
                    android:layout_width="30dp"
                    android:layout_height="30dp"

                    android:visibility="invisible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="LGA:"

                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/state"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"

                    android:entries="@array/states" />


                <TextView
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="hi"
                    android:visibility="invisible" />


                <Spinner
                    android:id="@+id/lga"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"

                    />


            </GridLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Contact Full name:"

                android:textSize="12sp" />

            <EditText
                android:id="@+id/contactFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textCapWords"
                android:singleLine="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:maxLength="11"
                android:text="Contact Number:"

                android:textSize="12sp" />

            <EditText
                android:id="@+id/contactPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:alignmentMode="alignBounds"
                android:columnCount="2"
                android:rowCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="Date:"

                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:text="Time:"

                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/dateText"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:editable="false"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:hint="@string/date_format"
                    android:inputType="date|none" />


                <EditText
                    android:id="@+id/timeText"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center|bottom"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:editable="false"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:hint="@string/date_format"
                    android:inputType="time|none" />

            </GridLayout>


            <Button
                android:id="@+id/assignTaskBut"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:elevation="@dimen/cardview_default_elevation"
                android:padding="2dp"
                android:tag="add"
                android:text="@string/create"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
